kubernetes/apps/renovate/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: renovate
  labels:
    pod-security.kubernetes.io/enforce: privileged
