kubernetes/apps/renovate/networkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-renovate-policy
  namespace: renovate
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
      - kube-apiserver
      - host
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
  egress:
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.42.0.0/16        # pod CIDR
            - 10.96.0.0/12        # service CIDR
            - 192.168.0.0/16      # Home Network Range
            - 10.0.40.0/24        # Storage CIDR
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - {}
